[package]
name = "heimdall"
version = "0.1.0"
authors = ["Christian Sporer <sporer@acriba.at>"]

[dependencies]
regex = ""
time = "0.1"
xmltree = "0.3.2"
getopts = "0.2"
log = "0.3.6"
slog = "1.2.0"
slog-stream = "1.2.0"
slog-term = "1.3.3"
slog-stdlog = "1.1.0"
num-traits = "0.1.36"
lru-cache = "0.1.0"
fnv = "1.0.5"